kubernetes/base/transfer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-service
  labels:
    app: transfer-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transfer-service
  template:
    metadata:
      labels:
        app: transfer-service
    spec:
      containers:
        - name: transfer-service
          image: itzangel24/transfer-service:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: transfer-service
spec:
  selector:
    app: transfer-service
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
